--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ modal end
 
           <!-- content goes here -->
           <div class="form-area">
-            <form role="form" action="https://docs.google.com/forms/u/1/d/e/1FAIpQLSf2tU3FCb0KWeNMbskNq9zIGKlq9k60cveLlBKx3XUOyW-Eew/formResponse" method="post">
+            <form role="form" action="https://docs.google.com/forms/u/1/d/e/1FAIpQLSf2tU3FCb0KWeNMbskNq9zIGKlq9k60cveLlBKx3XUOyW-Eew/formResponse" method="post" target="hidden_iframe" onsubmit="submitted=true;">
               <div class="form-group">
                 <input type="text" name="entry.233542546" class="form-control" id="name" placeholder="Name" required>
               </div>
