--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ modal end
               </div>
             </form>
             <script type="text/javascript">var submitted = false;</script>
-            <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted)  {window.location='contact/thanks-page.html';}"></iframe>
+            <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {window.location='contact/thanks-page.html';}"></iframe>
             <!-- content goes here -->
           </div>
         </div>
@@ -160,5 +160,40 @@ modal end
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/crime.js"></script>
     <script src="js/tiltfx.js"></script>
+    <script type="text/javascript">
+      // Form Validator
+      $(document).ready(function () {
+        $("#form").validate({
+          rules: {
+            "entry.233542546": {
+              required: true
+            },
+            "entry.2108942869": {
+              required: true
+            },
+            "entry.1551144577": {
+              required: true,
+              email: true
+            }
+          },
+          messages: {
+            "entry.233542546": {
+              required: "必須項目です"
+            },
+            "entry.2108942869": {
+              required: "必須項目です"
+            },
+            "entry.1551144577": {
+              required: "必須項目です",
+              email: "必須項目です"
+            }
+          },
+          submitHandler: function (form) { // for demo
+            form.submit();
+          }
+        });
+
+      });
+    </script>
 </body>
 </html>
