--- a/contact/thanks-page.html
+++ b/contact/thanks-page.html
@@ -6,9 +6,8 @@
   <meta name="robots" content="noindex,nofollow">
 
   <title>lol</title>
-  <link href="css/crime.css" rel="stylesheet">
-  <link href="css/menu.css" rel="stylesheet">
-  <link rel="canonical" href="https://www.example.com/">
+  <link href="../css/crime.css" rel="stylesheet">
+  <link href="../css/menu.css" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.0/css/all.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.0/css/v4-shims.css">
 
@@ -80,15 +79,15 @@ modal end
   <header id="header">
     <div class="container">
       <div id="logo">
-        <a class="navbar-brand" href="index.html"><img src="images/geometric_pattern_animated.svg"></a>
+        <a class="navbar-brand" href="../index.html"><img src="images/geometric_pattern_animated.svg"></a>
       </div>
       <div class="navbar">
         <ul class="list-inline">
           <li class="folder"><a href="#" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span>menu</span></a>
             <div class="dropdown-menu folder-child-wrapper">
               <ul class="folder-child">
-                　<li><a class="dropdown-item" href="index.html">home</a></li>
-                <li><a class="dropdown-item" href="project.html">project</a></li>
+                　<li><a class="dropdown-item" href="../index.html">home</a></li>
+                <li><a class="dropdown-item" href="../project.html">project</a></li>
                 <!--<li><a class="dropdown-item" href="#">Another action</a><li>-->
               </ul>
             </div>
@@ -142,7 +141,7 @@ modal end
               </div>
             </form>
             <script type="text/javascript">var submitted = false;</script>
-            <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted){window.location='contact/thanks-page.html';}"></iframe>
+            <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted){window.location='thanks-page.html';}"></iframe>
             <!-- content goes here -->
           </div>
         </div>
@@ -156,7 +155,7 @@ modal end
     <div id="main">
       <div class="container">
         <div id="productNav" class="col-md-12">
-          <a href="index.html"></a><span class="back-arrow">←</span> thanks messege </a>
+          <a href="../index.html"></a><span class="back-arrow">←</span> thanks messege </a>
         </div>
       </div>
     </div>
@@ -164,7 +163,7 @@ modal end
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/crime.js"></script>
-    <script src="js/tiltfx.js"></script>
+    <script src="../js/crime.js"></script>
+    <script src="../js/tiltfx.js"></script>
 </body>
 </html>
