--- a/contact/thanks-page.html
+++ b/contact/thanks-page.html
@@ -13,7 +13,7 @@
 
   <style>
     body {
-      background-image: url(images/bg.png);
+      background-image: url(../images/bg.png);
       background-position: center center;
       background-size: cover;
       background-attachment: fixed;
@@ -79,7 +79,7 @@ modal end
   <header id="header">
     <div class="container">
       <div id="logo">
-        <a class="navbar-brand" href="../index.html"><img src="images/geometric_pattern_animated.svg"></a>
+        <a class="navbar-brand" href="../index.html"><img src="../images/geometric_pattern_animated.svg"></a>
       </div>
       <div class="navbar">
         <ul class="list-inline">
