--- a/contact/thanks-page.html
+++ b/contact/thanks-page.html
@@ -13,7 +13,7 @@
 
   <style>
     body {
-      background-image: url(../images/bg.png);
+      /*background-image: url(images/bg.JPG);*/
       background-position: center center;
       background-size: cover;
       background-attachment: fixed;
@@ -42,9 +42,75 @@
       margin: 0 auto;
     }
 
+    #main {
+      max-width: 1200px;
+      margin: 0 auto;
+    }
+
+    #main .col-md-12 {
+      display: block;
+      border-bottom: 1px solid #ddd;
+      text-align: center;
+    }
+
+    #productNav {
+      text-transform: lowercase;
+      margin-bottom: 60px;
+      display: none;
+      padding-bottom: 25px;
+      margin-top: -25px;
+    }
+
+    #main02 {
+      max-width: 1200px;
+      margin: 0 auto;
+    }
+
+    #main02 .col-md-6 {
+      margin: 0 0 .5em;
+    }
+
+    #main02 .col-md-6 {
+      margin: 1em 0;
+      font-size: 14px
+        /*16px*/
+      ;
+      line-height: 1.5em;
+    }
+
+    p {
+      word-wrap: break-word;
+    }
+
+    input,
+    select,
+    textarea {
+      font-size: 100%;
+      margin: 0;
+      vertical-align: baseline;
+    }
+
+    input,
+    select,
+    textarea {
+      font-family: sans-serif;
+      color: #222;
+    }
+
+    #main02 input {
+      padding: 5px 10px;
+      border: 1px solid #ccc;
+      -moz-border-radius: 3px;
+      border-radius: 3px;
+    }
+
+    input {
+      line-height: normal;
+    }
+
     /*=========================
-modal start
-=========================*/
+    modal start
+    =========================*/
     .center {
       margin-top: 50px;
     }
@@ -70,8 +136,82 @@ modal start
     }
 
     /*=========================
-modal end
-=========================*/
+    modal end
+    =========================*/
+
+    /*=========================
+    carousel start
+    =========================*/
+    #carousel-custom {
+      margin-top: 10px;
+      width: 100%;
+    }
+
+    #carousel-custom .carousel-indicators {
+      margin: 10px 0 0;
+      overflow: auto;
+      position: static;
+      text-align: left;
+      white-space: nowrap;
+      width: 100%;
+    }
+
+    #carousel-custom .carousel-indicators li {
+      background-color: transparent;
+      -webkit-border-radius: 0;
+      border-radius: 0;
+      display: inline-block;
+      height: auto;
+      margin: 0 !important;
+      width: auto;
+    }
+
+    #carousel-custom .carousel-indicators li img {
+      display: block;
+      opacity: 0.5;
+    }
+
+    #carousel-custom .carousel-indicators li.active img {
+      opacity: 1;
+    }
+
+    #carousel-custom .carousel-indicators li:hover img {
+      opacity: 0.75;
+    }
+
+    #carousel-custom .carousel-outer {
+      position: relative;
+    }
+
+    .carousel-control.left {
+      background-image: none;
+      width: 54px;
+      height: 54px;
+      top: 50%;
+      left: 20px;
+      margin-top: -27px;
+      line-height: 54px;
+      /*border: 2px solid #fff;*/
+      opacity: 1;
+      text-shadow: none;
+    }
+
+    .carousel-control.right {
+      background-image: none;
+      width: 54px;
+      height: 54px;
+      top: 50%;
+      right: 20px;
+      margin-top: -27px;
+      line-height: 54px;
+      /*border: 2px solid #fff;*/
+      opacity: 1;
+      text-shadow: none;
+    }
+
+    /*=========================
+    carousel end
+    =========================*/
   </style>
 
 </head>
