--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ modal end
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
         </div>
-        <div class="modal-body">
+        <div class="modal-body" style="padding:10px 10px 0px 10px;">
           <!--end-->
 
           <!-- content goes here -->
