--- a/dauber.html
+++ b/dauber.html
@@ -238,6 +238,58 @@ carousel end
       </div>
     </div>
   </header><!-- /header -->
+  <!--start-->
+  <div class="modal fade" id="squarespaceModal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
+        </div>
+        <div class="modal-body" style="padding:10px 10px 0px 10px;">
+          <!--end-->
+
+          <!-- content goes here -->
+          <div class="form-area">
+            <form role="form" action="https://docs.google.com/forms/u/1/d/e/1FAIpQLSf2tU3FCb0KWeNMbskNq9zIGKlq9k60cveLlBKx3XUOyW-Eew/formResponse" method="post" target="hidden_iframe" onsubmit="submitted=true;">
+              <div class="form-group">
+                <input type="text" name="entry.233542546" class="form-control" id="name" placeholder="Name" required>
+              </div>
+              <div class="form-group">
+                <input type="email" name="entry.1551144577" class="form-control" id="email" placeholder="Email" required>
+              </div>
+              <div class="form-group">
+                <textarea name="entry.2108942869" class="form-control" id="message" placeholder="Message" maxlength="140" rows="7"></textarea>
+                <span class="help-block">
+                  <p id="characterLeft" class="help-block ">You have reached the limit</p></span>
+              </div>
+              <div class="modal-footer">
+                <div class="btn-group btn-group-justified" role="group" aria-label="group button">
+                  <div class="btn-group" role="group">
+                    <button type="button" class="btn btn-default" data-dismiss="modal" role="button">close</button>
+                  </div>
+                  <div class="btn-group btn-delete hidden" role="group">
+                    <button type="button" id="delImage" class="btn btn-default btn-hover-red" data-dismiss="modal" role="button">Close</button>
+                  </div>
+                  <div class="btn-group" role="group">
+                    <button type="submit" id="saveImage" class="btn btn-default btn-hover-green" data-action="save" role="button">submit</button>
+                  </div>
+                </div>
+              </div>
+            </form>
+            <script type="text/javascript">var submitted = false;</script>
+            <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {window.location='contact/thanks-page.html';}"></iframe>
+            <!-- content goes here -->
+          </div>
+        </div>
+      </div>
+      <!--end-->
+      <!--iframeにリダイレクトかける。-->
+
+      <!-- content goes here end-->
+    </div>
+  </div>
+  <!--end-->
+
   <!--main-->
   <div id="main">
     <div class="container">
