--- a/dauber.html
+++ b/dauber.html
@@ -233,7 +233,7 @@ carousel end
             </div>
           </li>
           <li><a href="https://www.instagram.com/DauberSide/"><span class="fab fa-instagram"></span><a></li>
-          <li><a data-toggle="modal" data-target="#squarespaceModal"><span class="glyphicon glyphicon-envelope"></span></a></li>
+          <li><a data-toggle="modal" data-target="#squarespaceModal"><span class="far fa-envelope"></span></a></li>
           <!--<li></li>-->
         </ul>
       </div>
