--- a/contact/thanks-page.html
+++ b/contact/thanks-page.html
@@ -281,7 +281,7 @@
               </div>
             </form>
             <script type="text/javascript">var submitted = false;</script>
-            <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted){window.location='thanks-page.html';}"></iframe>
+            <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted){window.location='#';}"></iframe>
             <!-- content goes here -->
           </div>
         </div>
