--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
           <li class="folder"><a href="#" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span>menu</span></a>
             <div class="dropdown-menu folder-child-wrapper">
               <ul class="folder-child">
-                　<li class="fas fa-home"><a class="dropdown-item" href="index.html">home</a></li>
-                <li class="fas fa-project-diagram"><a class="dropdown-item" href="project.html">project</a></li>
+                　<li><a class="dropdown-item fas fa-home" href="index.html">home</a></li>
+                <li><a class="dropdown-item fas fa-project-diagram" href="project.html">project</a></li>
                 <!--<li><a class="dropdown-item" href="#">Another action</a><li>-->
               </ul>
             </div>
