--- a/project.html
+++ b/project.html
@@ -21,8 +21,10 @@
           <li class="folder"><a href="#" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"><span>menu</span></a>
             <div class="dropdown-menu folder-child-wrapper">
               <ul class="folder-child">
-                　<li><a class="dropdown-item" href="index.html">home</a></li>
-                <li><a class="dropdown-item" href="project.html">project</a></li>
+                　<li><a class="dropdown-item" href="index.html">
+                    <p class="fa fa-home">home</p></a></li>
+                <li><a class="dropdown-item" href="project.html">
+                    <p class="fa fa-project-diagram">project</p></a></li>
                 <!--<li><a class="dropdown-item" href="#">Another action</a><li>-->
               </ul>
             </div>
