--- a/dauber.html
+++ b/dauber.html
@@ -25,15 +25,15 @@
             <div class="dropdown-menu folder-child-wrapper">
               <ul class="folder-child">
                 　<li><a class="dropdown-item" href="index.html">
-                    <p class="fa fa-home">home</p></a></li>
+                    <p class="fas fa-home">home</p></a></li>
                 <li><a class="dropdown-item" href="project.html">
-                    <p class="fa fa-project-diagram">project</p></a></li>
+                    <p class="fas fa-umbrella">project</p></a></li>
                 <!--<li><a class="dropdown-item" href="#">Another action</a><li>-->
               </ul>
             </div>
           </li>
-          <li><a href="https://www.instagram.com/DauberSide/"><span class="fab fa-instagram"></span><a></li>
-          <li><a data-toggle="modal" data-target="#squarespaceModal"><span class="far fa-envelope"></span></a></li>
+          <li><a href="https://www.instagram.com/DauberSide/"><span class="fas fa-instagram"></span><a></li>
+          <li><a data-toggle="modal" data-target="#squarespaceModal"><span class="fas fa-envelope"></span></a></li>
           <!--<li></li>-->
         </ul>
       </div>
