--- a/dauber.html
+++ b/dauber.html
@@ -88,13 +88,15 @@
 
   <!--main-->
   <div id="main">
-    <div class="container">
-      <div id="productNav" class="col-md-12">
-        <a href="project.html"><span class="back-arrow">←</span> Back to Project </a>
+    <div class="main">
+      <div class="container">
+        <div id="productNav" class="col-md-12">
+          <a href="project.html"><span class="back-arrow">←</span> Back to Project </a>
+        </div>
       </div>
     </div>
     <!--main-->
-    <div id="main02">
+    <div class="main02">
       <div class="container">
         <div class="col-md-12">
           <div class="col-md-6">
