--- a/dauber.html
+++ b/dauber.html
@@ -87,8 +87,8 @@
   <!-- content goes here end-->
 
   <!--main-->
-  <div id="main">
-    <div class="main">
+  <div id="content">
+    <div id="main">
       <div class="container">
         <div id="productNav" class="col-md-12">
           <a href="project.html"><span class="back-arrow">←</span> Back to Project </a>
@@ -96,7 +96,7 @@
       </div>
     </div>
     <!--main-->
-    <div class="main02">
+    <div id="main02">
       <div class="container">
         <div class="col-md-12">
           <div class="col-md-6">
@@ -158,13 +158,13 @@
       </div>
     </div>
     <!--main-->
-
-    <div class="container">
-      <div id="productNav" class="col-md-12">
-        <!--<a href="project.html"><span class="back-arrow">←</span> Back to Project </a>-->
+    <div id="main">
+      <div class="container">
+        <div id="productNav" class="col-md-12">
+          <!--<a href="project.html"><span class="back-arrow">←</span> Back to Project </a>-->
+        </div>
       </div>
     </div>
-
   </div>
   <!--main-->
 
