--- a/dauber.html
+++ b/dauber.html
@@ -165,17 +165,17 @@
             したがって皆さんは、肝心なのは「謎」であるとお取りになるかもしれない。あるいは、一層悪い事に、その謎の正解をどうやら見つけたと、私が勝手にそう思い込んでいるとお取りになるかもしれない。
             実際には、皆さんにお教えする様な事は、私には何もありません。</p>
           <p>
-            私はこれまで落書きを肌で感じ、腑分けし、落書きを（もしくは書こうと試み）、楽しんでもきました。
-            そしてこの最後の行為こそが、何よりも大切な事である事を悟りました。
-            「落書きを汲む」。これこそが私の得た、いわゆる最終的な結論です。事実、街にある空白を前にする度に私は、落書きを再発見するもの、という気がしています。
-            過去は何も役に立ちません。したがって私は、すでに申し上げた通り、自分の抱えている迷いを皆さんにご披露するだけなのです。この生涯の大半を落書きに捧げてきましたが、皆さんにお伝えできるのは様々な疑問でしかありません。
+            私はこれまで落書きを肌で感じ、腑分けし、落書きを（もしくは書こうと試み）、楽しんでもきました。<br>
+            そしてこの最後の行為こそが、何よりも大切な事である事を悟りました。<br>
+            「落書きを汲む」。<br>これこそが私の得た、いわゆる最終的な結論です。<br>事実、街にある空白を前にする度に私は、落書きを再発見するもの、という気がしています。
+            過去は何も役に立ちません。<br>したがって私は、すでに申し上げた通り、自分の抱えている迷いを皆さんにご披露するだけなのです。<br>この生涯の大半を落書きに捧げてきましたが、皆さんにお伝えできるのは様々な疑問でしかありません。
             </p>
           <p>
-            ところで、ニュースを覗く度に私は、一度も星を眺めた事のない天文学者の著作を読んでいる様な、妙な気分になった覚えがあります。
-            つまり落書きが苦役であって、真実のそれ、すなわち情熱と快楽ではないかの様に、書かれているわけです。
+            ところで、ニュースを覗く度に私は、一度も星を眺めた事のない天文学者の著作を読んでいる様な、妙な気分になった覚えがあります。<br>
+            つまり落書きが苦役であって、真実のそれ、すなわち情熱と快楽ではないかの様に、書かれているわけです。<br>
             私は、ADAMSのKINGSIZEを読んで、私が感じた定義は「take what get mentality」、というものでした。
-            それで、我々が何かの表現を考えた場合には、形式と内容という古くからの問題に立ち返るわけです。しかし、特にある事柄の表現について考えるのでなければ、実際には、それは我々に与えてくれない。そこで、あの定義は敬意をもって受け入れておいて、それからその先にある物を探求する。我々の場合で言えば落書きを探求し、生を探求するわけです。私の信ずるところでは、生は落書きから成り立っています。落書きは、ことさら風変わりな何物かではない。いずれ分かりますが、落書きは都会という場所で待ち伏せています。いつ何時、我々の目の前に現れるやもしれないのです。
-            ところで、これはよく起こる事ですが、我々はある思い違いをします。例えば落書きを研究する事は即、破壊行為であると、それは思い違いです。しかし、書物というものはなんであるかを知るきっかけでしかありません。
+            それで、我々が何かの表現を考えた場合には、形式と内容という古くからの問題に立ち返るわけです。<br>しかし、特にある事柄の表現について考えるのでなければ、実際には、それは我々に与えてくれない。<br>そこで、あの定義は敬意をもって受け入れておいて、それからその先にある物を探求する。<br>我々の場合で言えば落書きを探求し、生を探求するわけです。<br>私の信ずるところでは、生は落書きから成り立っています。<br>落書きは、ことさら風変わりな何物かではない。<br>いずれ分かりますが、落書きは都会という場所で待ち伏せています。<br>いつ何時、我々の目の前に現れるやもしれないのです。<br>
+            ところで、これはよく起こる事ですが、我々はある思い違いをします。<br>例えば落書きを研究する事は即、破壊行為であると、それは思い違いです。<br>しかし、書物というものはなんであるかを知るきっかけでしかありません。
             </p>
         </div>
       </div>
