--- a/dauber.html
+++ b/dauber.html
@@ -104,14 +104,15 @@
             from
             <span class="sqs-money-native">2020</span>
             <div>
-              <p>序論：どこから始めましょうか？</p>
+              <p>Introduction: where should we start?</p>
               <p>
-            二十世紀から二十一世紀の頃、朝のしらしら明けから夜の帳が降りるまで、獣の目に映るものは、ビルの谷間、垂直に並んだ建造物、絶えず入れ替わる男女、それに、どうやら枯れ葉の詰まった下水道の様だ。己の憧れている物があり、建物を塗りたくる悦びと構造物の臭いを運ぶ風である事を、私は知らなかった。いや。知る術がなかった。
-            </p>
-              <p>私はこの東国に生き、私を知っている人間が、ある定められた回数だけ私を眺め、私は消えていく。</p>
-              <p>しかし世界のからくりは、獣の単純な心にとってはあまりにも複雑に描写される。</p>
-              <p>私は焦点を絞った。薄暗いモヤモヤと映る夢、何世代もの人間が、ありふれた、そしてある意味では永遠に変わらぬ、営みの素材となるべき運命の塗布具。</p>
-              <p>それは一人の人間の夢に過ぎない、しかし万人の記憶の一部となる。</p>
+                In the twentieth and twenty-first centuries, from the dawn of a new day until the veil of darkness descended, What see in the eyes of the beast, was a valley of buildings, vertical structures, constantly changing men and women, and, apparently, a sewer filled with dead leaves. Little did I know that there was something I longed for, a wind that carried the pleasure of painting buildings and the smell of structures. Nope. I had no way to know.
+                I live in this eastern country, where people who know me look at me a certain predetermined number of times and I disappear.
+                But the workings of the world are too complicated to describe for the simple mind of the beast.
+                I focused. A dream that looks dim and moody, an application tool destined to be a material for activities that generations of human beings are commonplace and, in a sense, forever.
+
+                It's just a human dream, but it becomes part of everyone's memory.
+                </p>
             </div>
           </div>
           <!--carousel-custom-->
@@ -160,22 +161,33 @@
     <div id="main02">
       <div class="container">
         <div class="col-md-12">
-          <p>第1節：落書きという謎</p>
-          <p>まず最初に、私から何を期待すべきか、いやむしろ、何を期待すべきでないか、はっきり申し上げておきたいと思います。落書きという謎は題目そのままで謎にあります。
-            したがって皆さんは、肝心なのは「謎」であるとお取りになるかもしれない。あるいは、一層悪い事に、その謎の正解をどうやら見つけたと、私が勝手にそう思い込んでいるとお取りになるかもしれない。
-            実際には、皆さんにお教えする様な事は、私には何もありません。</p>
+          <p>Section 1: The Mystery of Graffiti</p>
           <p>
-            私はこれまで落書きを肌で感じ、腑分けし、落書きを（もしくは書こうと試み）、楽しんでもきました。<br>
-            そしてこの最後の行為こそが、何よりも大切な事である事を悟りました。<br>
-            「落書きを汲む」。<br>これこそが私の得た、いわゆる最終的な結論です。<br>事実、街にある空白を前にする度に私は、落書きを再発見するもの、という気がしています。
-            過去は何も役に立ちません。<br>したがって私は、すでに申し上げた通り、自分の抱えている迷いを皆さんにご披露するだけなのです。<br>この生涯の大半を落書きに捧げてきましたが、皆さんにお伝えできるのは様々な疑問でしかありません。
+            First of all, I would like to make it clear what I should expect, or rather, what I should not expect. The mystery of graffiti is in the mystery as it is. Therefore, you may take it as the "mystery" that matters. Or, worse, I might assume that I've found the correct answer to the mystery. In reality, I have nothing to teach you.
+          </p>
+          <p>
+            I understand graffiti from experience.、Identify things.、GRAFFITI(or attempted to write) enjoyed.
+            And I realized that this last act was the most important thing I could do.
+            「Draw on one's feel empathy」
+            This is the so-called final conclusion I have reached.
+            In fact, every time I see a blank space in the city, I feel like rediscovering graffiti. The past is of no use.
+            So, as I said, I'm just showing you my doubts.
+            I've devoted most of my life to graffiti, but I can only tell you a lot of questions.
             </p>
           <p>
-            ところで、ニュースを覗く度に私は、一度も星を眺めた事のない天文学者の著作を読んでいる様な、妙な気分になった覚えがあります。<br>
-            つまり落書きが苦役であって、真実のそれ、すなわち情熱と快楽ではないかの様に、書かれているわけです。<br>
-            私は、ADAMSのKINGSIZEを読んで、私が感じた定義は「take what get mentality」、というものでした。
-            それで、我々が何かの表現を考えた場合には、形式と内容という古くからの問題に立ち返るわけです。<br>しかし、特にある事柄の表現について考えるのでなければ、実際には、それは我々に与えてくれない。<br>そこで、あの定義は敬意をもって受け入れておいて、それからその先にある物を探求する。<br>私の場合で言えば落書きを探求し、生を探求するわけです。<br>私の信ずるところでは、生は落書きから成り立っています。<br>落書きは、ことさら風変わりな何物かではない。<br>いずれ分かりますが、落書きは都会という場所で待ち伏せています。<br>いつ何時、我々の目の前に現れるやもしれないのです。<br>
-            ところで、これはよく起こる事ですが、我々はある思い違いをします。<br>例えば落書きという行為そのものが即、破壊行為であると、それは思い違いです。<br>しかし、書物というものはなんであるかを知るきっかけでしかありません。
+            By the way, every time I read the news, I remember feeling strange as if I was reading the work of an astronomer who had never seen the stars.
+            In other words, graffiti is a difficult task, and it is written as if it were not true, that is, passion and pleasure.
+            I read ADAMS's KING SIZE and the definition I felt was "take what get mentality". So when we think of some expression, we go back to the old problem of form and content.
+            But in reality, it doesn't give us unless we specifically think about the expression of something.
+            So accept that definition with respect, and then explore what lies ahead.
+            In my case, I'm exploring graffiti and exploring life.
+            In my belief, life is made up of graffiti.
+            Graffiti is nothing unusual.
+            As you'll see, graffiti is ambushed in the city.
+            It may appear in front of us at any time.
+            By the way, this is common, but we make a mistake.
+            For example, it is a misunderstanding that the act of graffiti itself is an immediate vandalism.
+            It's just an opportunity to know what it is.
             </p>
         </div>
       </div>
