--- a/dauber.html
+++ b/dauber.html
@@ -99,6 +99,7 @@
     </div>
   </div>
   <!--main-->
+
   <div id="content">
 
 
@@ -137,13 +138,13 @@
           <div id="carousel-custom" class="carousel slide" data-ride="carousel">
             <!-- Wrapper for slides -->
             <div class="carousel-inner" role="listbox">
-              <div class="item active">
+              <div class="item ">
                 <img src="https://i.pinimg.com/originals/63/18/6d/63186d8b8cee97e766f2dd7b49b8a35c.png" alt="..." class="img-responsive center-block" height="600" width="600">
               </div>
               <div class="item">
                 <img src="https://i.pinimg.com/originals/67/74/44/67744483dc93a57ad7ca552cd4b919f5.png" alt="..." class="img-responsive center-block" height="600" width="600">
               </div>
-              <div class="item">
+              <div class="item active">
                 <img src="https://i.pinimg.com/originals/3e/ba/3b/3eba3b25bac88bc0c73dae32845397f6.png" alt="..." class="img-responsive center-block" height="600" width="600">
               </div>
             </div>
@@ -160,7 +161,7 @@
 
 
             <!-- Indicators start-->
-            <ol class="carousel-indicators visible-sm-block hidden-xs-block visible-md-block visible-lg-block">
+            <!--<ol class="carousel-indicators visible-sm-block hidden-xs-block visible-md-block visible-lg-block">
               <li data-target="#carousel-custom" data-slide-to="0" class="active">
                 <img src="https://i.pinimg.com/originals/63/18/6d/63186d8b8cee97e766f2dd7b49b8a35c.png" alt="..." class="img-responsive center-block" height="60" width="60">
               </li>
@@ -170,7 +171,7 @@
               <li data-target="#carousel-custom" data-slide-to="2">
                 <img src="https://i.pinimg.com/originals/3e/ba/3b/3eba3b25bac88bc0c73dae32845397f6.png" alt="..." class="img-responsive center-block" height="60" width="60">
               </li>
-            </ol>
+            </ol>-->
             <!--Indicators end-->
           </div>
 
